--- a/config/database.yml
+++ b/config/database.yml
@@ -11,21 +11,21 @@ default: &default
 
 development:
   <<: *default
-  database: jurist_dev
+  database: antip_dev_jur
   username: root
-  password: default_password
+  password: antip
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: jurist_test
+  database: antip_test_jur
   username: root
-  password: default_password
+  password: antip
 
 production:
   <<: *default
-  database: jurist_production
+  database: antip_production_jur
   username: root
-  password: default_password
+  password: antip
