--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   <<: *default
   database: jurist_dev
   username: root
-  password: default_password
+  password: antip
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -22,10 +22,11 @@ test:
   <<: *default
   database: jurist_test
   username: root
-  password: default_password
+  password: antip
 
 production:
   <<: *default
   database: jurist_production
   username: root
-  password: default_password
+  password: antip
+  
